--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-storage:16.0.1'
+//recycler view te firebase theke data anar jonno dependency
+    implementation 'com.firebaseui:firebase-ui-database:4.2.1'
+
 
     //swipe for navigation drwaer
     implementation 'com.github.mzule.fantasyslide:library:1.0.5'
@@ -54,3 +57,4 @@ dependencies {
     implementation 'com.github.florent37:shapeofview:1.3.2'
 }
 apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
